--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         <p><i class="fas fa-map-marker-alt" style="color: var(--primary-color); margin-right: 10px;"></i> Konum: İzmir, TÜRKİYE</p>
     </section>
 
-    <div class="footer fade">© 2025 Alper Yaman — ŞİRKET İSMİ</div>
+    <div class="footer fade">© 2025 Alper Yaman</div>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
@@ -620,4 +620,5 @@
         });
     </script>
 </body>
+
 </html>
